Added home page

--- a/index.html
+++ b/index.html
@@ -4,14 +4,26 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="output/home.css" />
     <title>SkyWatch</title>
 
     <script defer type="module" src="/main.js"></script>
   </head>
   <body>
-    <div>
-      <h1>Hello World</h1>
-    </div>
+    <section class="home-card">
+      <img src="/web-logo.png" alt="Web Logo" />
+      <h1>SkyWatch: Global Weather Monitoring System</h1>
+      <p>
+        A weather application to know the weather of a specific place, either be
+        a city or country.
+      </p>
+      <a href="/">Start Seaching</a>
+    </section>
   </body>
 </html>
