Adjusted file imports

--- a/pages/weather/index.html
+++ b/pages/weather/index.html
@@ -10,10 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="output/weather.css" />
+    <link rel="stylesheet" href="../../output/weather.css" />
     <title>SkyWatch</title>
 
-    <script defer type="module" src="/main.js"></script>
+    <script defer type="module" src="../../scripts/main.js"></script>
   </head>
   <body>
     <div class="input-section">
