--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         A weather application to know the weather of a specific place, either be
         a city or country.
       </p>
-      <a href="weather.html">Start Seaching</a>
+      <a href="/pages/weather/">Start Seaching</a>
     </section>
   </body>
 </html>
