Added dynamic background

--- a/pages/weather/index.html
+++ b/pages/weather/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div class="input-section">
-      <a href="/">Back to home</a>
+      <a href="/" id="back-to-home">Back to home</a>
       <form action="/" id="place-input-form">
         <input
           type="text"
