Added section two content

--- a/pages/weather/index.html
+++ b/pages/weather/index.html
@@ -65,6 +65,58 @@
           </div>
         </div>
       </div>
+
+      <div class="section-two">
+        <div class="section-two-card">
+          <div>
+            <p>Sunrise</p>
+            <p id="sunrise"></p>
+          </div>
+          <img src="/icons/sunrise.png" alt="Sunrise Icon" />
+        </div>
+        <div class="section-two-card">
+          <div>
+            <p>Sunset</p>
+            <p id="sunset"></p>
+          </div>
+          <img src="/icons/sunset.png" alt="Sunset Icon" />
+        </div>
+        <div class="section-two-card">
+          <div>
+            <p>Humidity</p>
+            <p id="humidity"></p>
+          </div>
+          <img src="/icons/humidity.png" alt="Humidity Icon" />
+        </div>
+        <div class="section-two-card">
+          <div>
+            <p>Pressure</p>
+            <p id="pressure"></p>
+          </div>
+          <img src="/icons/pressure.png" alt="Pressure Icon" />
+        </div>
+        <div class="section-two-card">
+          <div>
+            <p>Wind</p>
+            <p id="wind"></p>
+          </div>
+          <img src="/icons/wind.png" alt="Wind Icon" />
+        </div>
+        <div class="section-two-card">
+          <div>
+            <p>Visibility</p>
+            <p id="visibility"></p>
+          </div>
+          <img src="/icons/visibility.png" alt="Visibility Icon" />
+        </div>
+        <div class="section-two-card">
+          <div>
+            <p>Cloudinesss</p>
+            <p id="cloudiness"></p>
+          </div>
+          <img src="/icons/cloudy-day.png" alt="Cloudy Icon" />
+        </div>
+      </div>
     </div>
   </body>
 </html>
