Added section three content

--- a/pages/weather/index.html
+++ b/pages/weather/index.html
@@ -117,6 +117,14 @@
           <img src="/icons/cloudy-day.png" alt="Cloudy Icon" />
         </div>
       </div>
+
+      <div class="section-three">
+        <div class="swiper mySwiper">
+          <div class="swiper-wrapper" id="swiper-wrapper"></div>
+          <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
