--- a/pages/weather/index.html
+++ b/pages/weather/index.html
@@ -125,6 +125,13 @@
           <div class="swiper-button-prev"></div>
         </div>
       </div>
+
+      <div class="section-four">
+        <div class="air-quality-index" id="air-quality-index-wrapper">
+          <p>Air Quality Index</p>
+          <p id="air-quality-index"></p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
