--- a/pages/weather/index.html
+++ b/pages/weather/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="theme-color" content="#18425A" />
+    <meta
+      name="keywords"
+      content="SkyWatch, skywatch, Skywatch, Sky Watch, sky watch weather app, Skywatch weather app, skywatch weather app"
+    />
+    <meta
+      name="description"
+      content="A weather application to know the weather of a specific place, either be
+      a city or country."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
