Changed back to home link icon

--- a/pages/weather/index.html
+++ b/pages/weather/index.html
@@ -20,6 +20,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
     <link rel="stylesheet" href="../../output/weather.css" />
     <title>SkyWatch</title>
 
@@ -27,7 +31,10 @@
   </head>
   <body>
     <div class="input-section">
-      <a href="/" id="back-to-home">Back to home</a>
+      <a href="/" id="back-to-home">
+        <i class="fa-solid fa-house"></i>
+      </a>
+
       <form action="/" id="place-input-form">
         <input
           type="text"
